--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,15 @@
 {
-  // 默认装的是 R4.3, 也可以指定4.2.3
+  // Default install R4.3, point your R version, such as 4.2.3,
+  // Check the pre-compiled packages at https://github.com/orgs/rocker-org/packages
+  // ML will be installed with cuda.
+  // tidyverse has two version, devcontainer is under heavily developing.
   "name": "R4",
-  "image":  "ghcr.io/rocker-org/r-ver:4.2.3",
+  "image":  "ghcr.io/rocker-org/tidyverse:4.2.3",
+  //"image":  "ghcr.io/rocker-org/tidyverse:4.3",
+  //"image":  "ghcr.io/rocker-org/r-ver:4.2.3",
   //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
+  //"image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.2",
+  //"image":  "ghcr.io/rocker-org/ml-verse:4.3",
   "waitFor": "onCreateCommand",
   "updateContentCommand": "",
   "postCreateCommand": "",
