--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,8 +8,8 @@
     //"image":  "ghcr.io/rocker-org/tidyverse:4.3",
     //"image":  "ghcr.io/rocker-org/r-ver:4.2.3",
     //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
-    "image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.2.3",
-    //"image":  "ghcr.io/rocker-org/ml-verse:4.3",
+    //"image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.2",
+    "image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.3",
     "waitFor": "onCreateCommand",
     "updateContentCommand": "",
     "postCreateCommand": "",
