--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,39 +1,27 @@
 {
-    // Default install R4.3, point your R version, such as 4.2.3,
-    // Check the pre-compiled packages at https://github.com/orgs/rocker-org/packages
-    // ML will be installed with cuda.
-    // tidyverse has two version, devcontainer is under heavily developing.
-    "name": "R4",
-    //"image":  "ghcr.io/rocker-org/tidyverse:4.2.3",
-    //"image":  "ghcr.io/rocker-org/tidyverse:4.3",
-    //"image":  "ghcr.io/rocker-org/r-ver:4.2.3",
-    //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
-    //"image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.2",
-    "image":  "ghcr.io/rocker-org/devcontainer/tidyverse:4.3",
-    "waitFor": "onCreateCommand",
-    "updateContentCommand": "",
-    "postCreateCommand": "",
-    "customizations": {
-       "vscode": {
-           "extensions": [
-               "ms-python.python",
-               "ms-toolsai.jupyter",
-               "eamodio.gitlens",
-               "streetsidesoftware.code-spell-checker",
-          ]
-       }
-     },
-     // Here use devcontainer-features, corresponding to upper devcontainer.
-     // Seem not work with stable image.
-    "features": {
-        "ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
-            "version": "none",
-            "vscodeRSupport": "full",
-            "installJupyterlab": true,
-            "installDevTools": true,
-            "installRMarkdown": true,
-            "installREnv": true
-        }
-    }
+  // 默认装的是 R4.3, 也可以指定4.2.3
+  "name": "R4",
+  "image":  "ghcr.io/rocker-org/r-ver:4.2.3",
+  //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
+  "waitFor": "onCreateCommand",
+  "customizations": {
+     "vscode": {
+         "extensions": [
+             "ms-python.python",
+             "ms-toolsai.jupyter",
+             "eamodio.gitlens",
+             "streetsidesoftware.code-spell-checker",
+        ]
+     }
+   },
+  "features": {
+      "ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
+          "version": "none",
+          "vscodeRSupport": "full",
+          "installJupyterlab": true,
+          "installDevTools": true,
+          "installRMarkdown": true,
+          "installREnv": true
+      }
   }
-  
+}
