--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,9 @@
 {
   // 默认装的是 R4.3, 也可以指定4.2.3
   "name": "R4",
+  "image":  "ghcr.io/rocker-org/tidyverse:4.2.3",
   //"image":  "ghcr.io/rocker-org/r-ver:4.2.3",
-  "image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
+  //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
   "waitFor": "onCreateCommand",
   "customizations": {
      "vscode": {
@@ -14,14 +15,4 @@
         ]
      }
    },
-  "features": {
-      "ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
-          "version": "none",
-          "vscodeRSupport": "full",
-          "installJupyterlab": true,
-          "installDevTools": true,
-          "installRMarkdown": true,
-          "installREnv": true
-      }
-  }
 }
