--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
   // 默认装的是 R4.3, 也可以指定4.2.3
   "name": "R4",
-  //"image":  "ghcr.io/rocker-org/tidyverse:4.2.3",
   "image":  "ghcr.io/rocker-org/r-ver:4.2.3",
   //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
   "waitFor": "onCreateCommand",
@@ -15,4 +14,14 @@
         ]
      }
    },
+  "features": {
+      "ghcr.io/rocker-org/devcontainer-features/r-rig:1": {
+          "version": "none",
+          "vscodeRSupport": "full",
+          "installJupyterlab": true,
+          "installDevTools": true,
+          "installRMarkdown": true,
+          "installREnv": true
+      }
+  }
 }
