--- a/devcontainer_template/devcontainer_simple.json
+++ b/devcontainer_template/devcontainer_simple.json
@@ -1,5 +1,7 @@
 {
-  // 默认装的是 R4.3, 也可以指定4.2.3
+  // Default install R4.3, point your R version, such as 4.2.3,
+  // Check the pre-compiled packages at https://github.com/orgs/rocker-org/packages
+  // tidyverse has two version, devcontainer is under heavily developing.
   "name": "R4",
   "image":  "ghcr.io/rocker-org/r-ver:4.2.3",
   //"image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
